fix(theme-default): fix z-index in weekly (#1296)

--- a/packages/theme-default/src/components/calendar/event-modal/wrapper.scss
+++ b/packages/theme-default/src/components/calendar/event-modal/wrapper.scss
@@ -7,7 +7,7 @@
   max-width: 100%;
   height: fit-content;
   background-color: var(--sx-color-background);
-  z-index: 2;
+  z-index: var(--sx-z-index-event-modal);
 
   &.is-open {
     animation: slide-sideways;
